--- a/en/judka/photo/grandfather/03.md
+++ b/en/judka/photo/grandfather/03.md
@@ -11,4 +11,4 @@ And this postcard with his grandson was sent by great-great-grandfather
 Peisach to great-great-grandfather Samson and great-great-grandmother Pesia:
 
 ![](/files/judka/photo/ded/photo0007.jpg)
-![](/files/judka/photo/ded/photo0008.jpg)
+<!-- ![](/files/judka/photo/ded/photo0008.jpg) -->
