Add praded/judka_linkov.jpg, photo/ded/hadi_cover.jpg, hadi_graduation.jpg

--- a/en/judka/photo/grandfather/19.md
+++ b/en/judka/photo/grandfather/19.md
@@ -9,3 +9,8 @@ that this was the first sunny, summer-warm day that year.
 It's also interesting that instead of cars there were still horse-drawn carriages.
 
 ![19 years old](/files/judka/photo/ded/2-05-1933_harkov.jpg)
+
+He graduated from the institute as an engineer in 1939.
+Photograph from the graduation album:
+
+![](/files/judka/photo/ded/hadi_graduation.jpg)
