Update comments in the book and add photos

--- a/en/judka/photo/grandfather/03.md
+++ b/en/judka/photo/grandfather/03.md
@@ -3,7 +3,7 @@ title: With parents and sister
 time: "1917"
 ---
 Great-grandfather Judko, great-grandmother Esther-Malka
-and grandfather David with sister Toma:
+and grandfather David with sister Tafilija:
 
 ![family](/files/judka/photo/ded/photo0001.jpg)
 
