--- a/en/judka/photo/grandfather/15.md
+++ b/en/judka/photo/grandfather/15.md
@@ -16,3 +16,14 @@ my grandfather presented me my first bicycle as a reward.
 And so in the morning we loaded the bicycle into the car and drove to our summerhouse.
 We went to the forest edge with the bicycle, and grandfather taught me to
 ride it — about 50 years after this photograph was taken.
+
+More photos from youth:
+
+![](/files/judka/photo/ded/photo0003.jpg)
+
+[Mandolin](https://en.wikipedia.org/wiki/Mandolin) —
+grandfather's favorite musical instrument.
+
+![mandolin](/files/judka/photo/ded/photo0010.jpg)
+
+![mandolin](/files/judka/photo/ded/photo0011.jpg)
