--- a/en/judka/photo/grandfather/19.md
+++ b/en/judka/photo/grandfather/19.md
@@ -7,6 +7,8 @@ The photograph was taken by great-grandfather in Kharkiv on May 2nd, 1933.
 The leaves on the trees had not yet bloomed, so you can see
 that this was the first sunny, summer-warm day that year.
 It's also interesting that instead of cars there were still horse-drawn carriages.
+And grandfather himself got his license and started driving a car
+9 years after this photo was taken.
 
 ![19 years old](/files/judka/photo/ded/2-05-1933_harkov.jpg)
 
