--- a/en/judka/photo/grandfather/16.md
+++ b/en/judka/photo/grandfather/16.md
@@ -2,8 +2,7 @@
 title: 16 years old
 time: "1930-07-25"
 ---
-At 16, grandfather went to serve in the army.
-The photograph was taken on July 25, 1930 —
+The next photograph in military uniform was taken on July 25, 1930 —
 also in great-grandfather's photo studio.
 
 ![16 years old](/files/judka/photo/ded/25-07-1930.jpg)
